--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,7 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <title>Vite + React</title>
+    <title>ABCD supermarket</title>
   </head>
   <body class="bg-dark text-white">
     <div id="root"></div>
